[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zne-replication-package"
version = "0.1.0"
description = "Replication package for bounded zero-noise extrapolation experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "mitiq==0.48.1",
    "scipy==1.16.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov-branch --cov-report xml --cov-report term --cov=. -vv --strict-markers -rfE"
pythonpath = ["src"]
testpaths = ["tests"]
